--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-  <h1>Calc It</h1>
+  <center></center><h1>Calc It</h1>
+  <h2>Put your Calculations in the machine!</h2></center>
 
 </body>
 </html>
